# ChangeLog for dev-perl/set-scalar
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/set-scalar/ChangeLog,v 1.25 2007/03/05 12:56:03 ticho Exp $

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> set-scalar-1.20.ebuild:
  Stable on x86, bug #169152.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -set-scalar-1.17.ebuild, set-scalar-1.19.ebuild, set-scalar-1.20.ebuild:
  Ebuild maintenance

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  set-scalar-1.20.ebuild:
  amd64 stable

  17 Sep 2006; Michael Cummings <mcummings@gentoo.org>
  set-scalar-1.20.ebuild:
  Keywording ~amd64

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  set-scalar-1.20.ebuild:
  ppc stable

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  set-scalar-1.17.ebuild, set-scalar-1.19.ebuild, set-scalar-1.20.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  19 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> set-scalar-1.20.ebuild:
  Stable on alpha.

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  set-scalar-1.20.ebuild:
  Stable on hppa

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  set-scalar-1.20.ebuild:
  Marking sparc stable

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-set-scalar-1.17, files/digest-set-scalar-1.19,
  files/digest-set-scalar-1.20, Manifest:
  Fixing SHA256 digest, pass four

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> set-scalar-1.19.ebuild:
  Mark 1.19 stable on alpha

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  set-scalar-1.19.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  set-scalar-1.19.ebuild:
  marking sparc x86 stable

*set-scalar-1.20 (13 Jan 2006)

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  +set-scalar-1.20.ebuild:
  Version bump

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> set-scalar-1.19.ebuild:
  add ~ia64
