@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Set-Scalar-1.19.tar.gz 15996 RMD160 3de7e238c32cee4e8bef1014a976631b0bfe0479 SHA1 1f0f147922a19b0c7f21213160994c3142095776 SHA256 10ede44c033280ffb6fc6144e6f9e86fe026385d295a3928f84417f7ca985730
 DIST Set-Scalar-1.20.tar.gz 16814 RMD160 c939cb700f36f66e474a68cf43850241a8a26de5 SHA1 4f895b4a1c5c2243f76b813478793d8910a48f66 SHA256 793f0782626ba9f68879a3a55d811643c04cfde080a6572b3ef0775a317ae97b
+DIST Set-Scalar-1.22.tar.gz 19165 RMD160 6792b309c606d4285bb7a80a15aefd29a7893aa8 SHA1 03b8a3b9bd006b84ae73e8c36d26e7a49d6859d0 SHA256 a59118ead51ead831f076d520cd35e2fd32647669045039d3f02de8bf75a737f
 EBUILD set-scalar-1.19.ebuild 570 RMD160 6c54d7a9a86b6952db6bbe4ebb6ebc6e10107bb9 SHA1 febfe697546d2495496f797ea5f4f4b643a9db6f SHA256 a3a2b49581febb4d361295c7c60d323c1572397b9e1d689e81f0ba93d6f49c27
 EBUILD set-scalar-1.20.ebuild 581 RMD160 e1a719198306eaf69736a379a4a520ba29ec7b61 SHA1 c485c861911c2ecc606ea9370d1794837d6d6aa7 SHA256 91f63998f623a912f4126efa1a530f0f4b9ea0752d4e2f98321802b50e9e8617
-MISC ChangeLog 3039 RMD160 1330d4263467d8b1e0f7197a5160596435661056 SHA1 44f85cf642d6aa55bbfc7e0e42d59e9d5cafd5fa SHA256 1186b08c5f95db58d548f64ada7a074f77e90a8d723abb9fc0d5ab271e7e8fd3
+EBUILD set-scalar-1.22.ebuild 597 RMD160 5e76da295308e7f4d6f59324c2472ba5070cc405 SHA1 a3f27e26c211d47f98c5a29728fb39799a368899 SHA256 be325381090f4467076a518eb2f0a2e4b784948f09a3b11e89ef89ef7a306456
+MISC ChangeLog 3159 RMD160 8221b63bcaa8d2d949cc39c96bddc7bed19dd7f6 SHA1 cd0dd8f9af4134af776a6027e46e58c001215b32 SHA256 9b3a10a00888612b611a3118ca19bc6efd080221b4b16f9f9355efc4b8a20f75
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkiwd+oACgkQV3J2n04EauzlDgCfQA8u2mN0IQVLnSATT34criMH
+ywsAn0HNiF+1UANBL7PJBlWKfmaMcsi/
+=TPl5
+-----END PGP SIGNATURE-----
