@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/set-scalar
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/set-scalar/ChangeLog,v 1.25 2007/03/05 12:56:03 ticho Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/set-scalar/ChangeLog,v 1.26 2008/08/23 20:50:00 tove Exp $
+
+*set-scalar-1.22 (23 Aug 2008)
+
+  23 Aug 2008; Torsten Veller <tove@gentoo.org> +set-scalar-1.22.ebuild:
+  Version bump
 
   05 Mar 2007; Andrej Kacian <ticho@gentoo.org> set-scalar-1.20.ebuild:
   Stable on x86, bug #169152.
